fix snake movement detaction on mobile and snake eyes position

--- a/index.css
+++ b/index.css
@@ -116,7 +116,7 @@ Snake
     background-color: white;
     box-shadow: 0 0 1px black;
     border-radius: calc(var(--eye-width)/2);
-    margin-bottom: 10px;
+    margin-bottom: calc(var(--eye-width) / 2);
     display: flex;
     align-items: end;
     justify-content: center;
@@ -183,10 +183,6 @@ Mouse
 #mouse .eye:nth-child(even) {
     margin-left: 4px;
     justify-content: start;
-}
-
-#mouse .eye:nth-child() {
-    margin-right: 4px;
 }
 
 #mouse .pupil {
